# bilive-coyote

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  package.json  plan.md  tsconfig.json
.github/workflows/: release.yml
_archive/: .gitignore  README.md  biome.json  tsconfig.json
_archive/docs/: bilibili-sources.md  development.md
_archive/public/js/: api.js  panel.js
_archive/src/: main.ts
_archive/src/bilibili/: live-socket.ts  service.ts  types.ts
_archive/src/config/: store.ts
_archive/src/coyote/: error-codes.ts  server.ts
_archive/src/engine/: event-bus.ts
docs/: api.md  bilibili-sources.md  configuration.md  coyote.md  development.md  setup.md
public/: index.html
public/css/: main.css
public/js/: api.js  panel.js  utils.js  ws.js
scripts/: build.ts
src/: app.rs  cli.rs  main.rs  main.ts
src/bilibili/: api.ts  danmaku-ws.ts  http_client.rs  live-socket.ts  mod.rs  open-platform-parser.ts  open-platform.ts  service.ts  signer.ts  types.ts
src/config/: mod.rs  runtime-state.ts  schema.ts  store.rs  store.ts  types.rs  types.ts  validation.rs
src/coyote/: error-codes.ts  manager.rs  message.ts  mod.rs  pairing.ts  protocol.rs  pulse-timer.ts  qrcode.rs  server.ts  session.rs  waveform.rs
src/engine/: event-bus.ts  gift-mapper.ts  gift_mapper.rs  mod.rs  strength-manager.ts  types.rs
src/http/: error.rs  mod.rs  routes.rs  static_files.rs
src/panel/: mod.rs
src/server/: main-server.ts  router.ts
web/: index.html  obs.html
web/css/: main.css  obs.css
web/js/: api.js  obs-widget.js  panel.js  ws.js
(+26 files in other folders)
