[package]
name = "bilive-coyote"
version = "0.1.1"
edition = "2024"
description = "Bilibili live gift to DG-LAB Coyote strength LAN bridge"
license = "Parity-7.0.0"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "signal", "sync", "time", "net", "fs"] }
axum = { version = "0.8", features = ["ws", "json"] }
tokio-tungstenite = { version = "0.29", default-features = false, features = ["connect", "rustls-tls-webpki-roots"] }
bytes = "1"
http-body-util = "0.1"
hyper = { version = "1", default-features = false, features = ["client", "http1"] }
hyper-rustls = { version = "0.27", default-features = false, features = ["http1", "ring", "tls12", "webpki-tokio"] }
hyper-util = { version = "0.1", default-features = false, features = ["client-legacy", "http1", "tokio"] }
rustls = { version = "0.23", default-features = false, features = ["ring", "std", "tls12"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tokio-util = { version = "0.7", features = ["rt"] }
futures-util = "0.3"
flate2 = "1"
brotli = "8"
hmac = "0.13"
sha2 = "0.11"
hex = "0.4"
md-5 = "0.11"
urlencoding = "2"
base64 = "0.22"
qrcode = "0.14"
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive", "env"] }
rust-embed = "8"
mime_guess = "2"
local-ip-address = "0.6"
rand = "0.10"
